# ising-monte-carlo-toolkit

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_DOCUMENTATION_ISING_MONTE_CARLO_TOOLKIT.md  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark_memory.py  benchmark_numba_kernels.py  benchmark_suite.py
docs/: USAGE.md  index.md
docs/api/: analysis.md  io.md  models.md  samplers.md  utils.md  visualization.md
src/ising_toolkit/: __init__.py  cli.py
src/ising_toolkit/analysis/: __init__.py  finite_size.py  observables.py  statistics.py  sweep.py
tests/: __init__.py  conftest.py  test_analysis.py  test_animation.py  test_cli.py  test_config.py  test_finite_size.py  test_io.py  test_memory_optimization.py  test_models.py  test_numba_benchmark.py  test_parallel.py  test_plots.py  test_samplers.py  test_statistics.py  test_styles.py  test_sweep.py  test_validation.py
workflow/: README.md  Snakefile
workflow/config/: config.yaml
workflow/rules/: analyze.smk  figures.smk
workflow/scripts/: aggregate_binder.py  aggregate_sweep.py  analyze_critical.py  calculate_observables.py  collect_results.py  compute_binder.py  compute_binder_single.py  compute_xi.py  create_animation.py  extract_exponents.py  find_Tc.py  generate_report.py  plot_binder.py  plot_collapse.py  plot_correlation.py  plot_fss.py  plot_observable.py  plot_phase_diagram.py  plot_snapshots.py  plot_specific_heat.py  plot_susceptibility.py
(+23 files in other folders)
