[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ising-monte-carlo-toolkit"
version = "0.1.0"
description = "A toolkit for Ising model Monte Carlo simulations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "numba>=0.56",
    "pyyaml>=6.0",
    "h5py>=3.7",
    "tqdm>=4.64",
    "pandas>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
ising-sim = "ising_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=ising_toolkit --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "src/ising_toolkit/utils/numba_kernels.py",
]
